--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -8,6 +8,11 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>LOGIN</title>
+        <style>
+        body{
+            background-image: url("https://i.pinimg.com/originals/39/5c/70/395c7078cb669090d909fb3c21691afe.jpg");
+            }
+        </style>
     </head>
     <body bgcolor ="red">
          <p>&nbsp;</p>
@@ -29,7 +34,7 @@
                                 <button type="submit" name="submit" class="btn btn-primary">Login</button><br><br>
                             </form><br/>
                         </div>
-                        <div class="panel-footer"><p>Don't have an account? <a href="#">Register</a></p></div>
+                        <div class="panel-footer"><p>Don't have an account? <a href="file:///C:/Users/gm/Documents/Untitled-2.html">Register</a></p></div>
                     </div>
                 </div>
             </div>
