--- a/Untitled-2.html
+++ b/Untitled-2.html
@@ -8,6 +8,12 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>SIGN UP</title>
+        <style>
+        body{
+            background-image: url("https://img.freepik.com/free-vector/abstract-halftone-background_23-2148583453.jpg?size=626&ext=jpg");
+            }
+            
+        </style>
     </head>
     <body>
          <form>
